# suai-data-analysis-intro

./: LICENSE  README.md  pyproject.toml
notebook/: ЛР_4_Хованов_27.ipynb
notebooks/: lab-01.ipynb  lab-03.ipynb
